src/resources/jamtaba.css
/* ... */
NinjamTrackGroupView[horizontal="true"] #topPanel{
    border-top-left-radius: 2px;
    border-bottom-left-radius: 2px;
}

TrackGroupView[unlighted="true"] > #topPanel  {
   background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(180, 180, 180), stop:1 rgb(70, 70, 70));
}

TrackGroupView #groupNameField {
    margin-bottom: 0px;
    margin-top: 0px;
    font-size: 11px;
    font-weight: normal;
}


/* LOCAL TRACK GROUP */
LocalTrackGroupView{
    border: none;
}

LocalTrackGroupView[highlighted="true"] {
    border: 1px solid white;

}

LocalTrackGroupView  #toolButton {
    background-color: none;
    background-image: url(':/images/gear.png');
    background-repeat: none;
    background-position: center center;
    border: none;
    padding: 0px;
    margin: 0px;
    width: 14px;
    height: 14px;
}

LocalTrackGroupView   #toolButton:hover{
    background-image: url(':/images/gear-hover.png');
}
/* ++++++++++++++++++++++++++++++++++ */

QLabel#labelPanR, QLabel#labelPanL{
    color: rgba(0, 0, 0, 160);
    font-size: 9px;
}

BaseTrackView > .QFrame#topSeparator{
background-color: rgb(210, 210, 210);
}

BaseTrackView > .QFrame#panSectionSeparator{
background-color: rgb(180, 180, 180);
}

/*+++++++++++++++++++++++++++++++++++++++++++++++*/
LocalTrackView, NinjamTrackView{
    border: none;
}

LocalTrackView[peakMetersOnly="true"]{
    background: none;

}

LocalTrackView[highlighted="true"]{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(230, 230, 230), stop:1 rgb(140, 140, 140));
}

LocalTrackView #inputPanel{
    padding: 2px;
    background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1,
    stop:0 rgba(0, 0, 0, 60),
    stop:1 rgba(0, 0, 0, 90));
    border-radius: 2px;
    border: none;
}

BaseTrackView[unlighted="false"] #inputPanel{
    border: 1px outset rgb(80,80,80);
}

LocalTrackView #inputPanel:hover{
    background-color: qlineargradient(x1:0, y1:0.4, x2:0, y2:1, stop:0 rgba(0, 0, 0, 20), stop:1 rgba(0, 0, 0, 40));
}

LocalTrackView #inputSelectionIcon{
    border: 1px solid rgba(0, 0, 0, 0);
    margin: 0px;
    padding: 0px;
    max-width: 22px;
    min-width: 22px;
    background-position: center;
    background-repeat: none;
}

LocalTrackView #midiToolsButton{
    font-size: 10px;
    /*background-image: url(':/images/input_midi.png');*/
    background-repeat: none;
    background-position: center left;
    padding: 0px;
}

LocalTrackView #inputSelectionIcon,
LocalTrackView #midiToolsButton
{
    min-height: 14px;
    max-height: 14px;
}

LocalTrackView #inputSelectionButton{
    background-color: none;
    background-image: url(':/images/arrow-down.png');
    background-repeat: none;
    background-position: center right;
    border: none;
    color: rgba(255,255, 255, 160);
    font-size: 9px;
    text-align: left;
    margin: 0px;
    padding-left: 2px;
    padding-right: 2px;
}

LocalTrackView #midiPeakMeter{
    max-width: 1px;
    min-width: 1px;
    border-radius: 1px;
    border: none;
}
/*+++++++++++++++++++++++++++++++++++++++++++++++*/

/* NINJAM */

NinjamRoomWindow #licenceButton{
    background-color: rgba(0, 0, 0, 8);
    border: 1px solid rgba(0, 0,0, 12);
    border-radius: 2px;
    background-image: url(':/images/licence.png');
    background-position: center center;
    background-repeat: none;
    min-height: 20px;
    min-width: 28px;
}

NinjamRoomWindow #licenceButton:hover{
    background-color: rgba(0, 0, 0, 30);
    border: 1px solid rgba(0, 0, 0, 40);

}

NinjamTrackView > #channelName{
    border: none; /* 1px solid rgba(0, 0, 0, 7);*/
    background-color: rgba(0, 0, 0, 6);
    border-radius: 2px;
    padding-top: 3px;
    padding-bottom: 3px;
    font-size: 10px;
    color: rgba(0, 0, 0, 160);
    max-width: 130px;
}


NinjamRoomWindow #groupNameField {
    border-radius: 2px;
    background-color: rgba(255,255, 255, 15);
    border: none;
    color: black;
    margin-bottom: 3px;
    margin-top: 3px;
    padding: 3px;
}

NinjamRoomWindow TrackGroupView #countryLabel{
    color: rgba(0, 0, 0, 180);
    qproperty-alignment: AlignCenter;
    font-size: 9px;
}

NinjamRoomWindow TrackGroupView{
    border: 1px solid rgba(0, 0, 0, 80);
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0      rgba(0, 0, 0, 0),
        stop:0.2    rgb(127,127,127)
        stop:1      rgb(127,127,127)
    );

    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
}


IntervalProgressWindow{
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
    stop: 0.8     rgb(210, 210, 210),
    stop: 1.0   rgba(160, 160, 160));
}



NinjamPanel #ninjamControlsPanel{
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
    stop: 0     rgba(0, 0, 0, 10),
    stop: 1.0   rgba(0, 0, 0, 30));

    border-radius: 3px;
    border: 1px inset rgb(120, 120, 120);
    /*min-height: 130px;*/
}

NinjamPanel #intervalPanel{
    color: rgb(238, 238, 238);
    font-weight: normal;
    font-size: 11px;
    background: none;
    margin: 0px;
    /*min-height: 80px;*/
}

NinjamPanel #panelCombos QLabel{
    color: black;
}

NinjamPanel #panelCombos QComboBox::down-arrow
{
    image:url(:/images/arrow-down.png);
}
NinjamPanel #panelCombos QComboBox::down-arrow:hover
{
    image:url(:/images/arrow-down-lighter.png);
}
NinjamPanel #panelCombos QComboBox::drop-down {
    border: 0px;
}

NinjamPanel #metronomeControls, NinjamPanel #panelCombos{
    background: transparent;
}

NinjamPanel #metronomeControls QSlider::groove:vertical{
    border: 1px inset rgb(140, 140, 140);
}

NinjamPanel #soloButton, NinjamPanel #muteButton{
    border: 1px solid rgba(0, 0, 0, 60);
}

NinjamPanel #preferencesButton,
NinjamPanel #floatingWindowButton
{
    background-repeat: none;
    background-position: center center;
    padding-left: 0px;
    padding-right: 0px;
}
/* ... */

